# todolist-cli

./: .gitignore  README.md  main.py  pyproject.toml
todolist/core/: config.py  services.py  validation.py
todolist/data/: models.py
